# ChangeLog for app-emacs/codepad
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  codepad-20091130.ebuild:
  Initial Changelog and start fixing bugs: Fix license and adjust needed
  Emacs version
