@@ -1,21 +1,21 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST codepad-20091130.el.bz2 3529 SHA256 3ff786c1ed7633d494b44b125dbe4dda0090fcaae6186cf1c3a8a97dc792cc5f
+DIST codepad-20100605.el.xz 3444 SHA256 096307f2a936d6764efbb2404263b0a73b22b484dcb1037bc2f37ab6c8bdb835 SHA512 e79b1b72b0b6610a5d6fadbf021632bdef543ea08008d412bd944300523bfb8ceb81b626961c5f0a6cb33f8f9fc0d545690c8d20ba99177495174c03d0274833 WHIRLPOOL e3ec8a73a6193ac8e015f47488fdaef0971fedc5f67b9898be149ca63dc1c7d231a910191275ab1122e837b56e701e58912129e76a880f665270ba3462ff5b0c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQiBgYAAoJEDxpGckxwJCBdsEP/3+3ILD/4rs8p16aweb5KCil
-tR/myCTdDoQ3c729RZgymlpXLGeUSdCIvKcSu43YhzUP7V2CTAqLoIl+Ku7Mm5SN
-rSep4Cs0u7rDeoCqjgETDq110yY4T3X3flnYd7S8cYjcP98XPWPxScVGNdcYkmPU
-DTTchQXljfH7qkxc0dMTp5aWgrV5AK9EygTDa5aCZ+b3Xxqhn+4zBLVQyo/JI5ej
-TgcNLjBuBf7A6MJd3bUuYs2iN1YqE/esmi7ASHmb2h0FgyG+fOEE39+WduqMnTCA
-XfBB9OmTvPoltSRRTTXZJpXA1zATnipSOCivb8mNuLygYy6fI1GoEUo9uU0eYMLL
-IAGt9KWI0RzwW8Hiyebvx/IDJSWQpRrYOGharTdGe68UINuIIhxwnzf9MZygF8cS
-t/MH5HnHilIrzlw5Ig15sn6xseXAJVZPkhFJukgVZWAwlBWt/q0jjGgFeFZUahnk
-gFyUdAN0+TCA6lSHaYDGjqAQoZKQZHdZRu2Pwqqx3fZjSfHqLnLaHQpn6s3L3Ezm
-pPrte/EsiL2A+lqOIdiCexqbwGx2r8I8m779ZpDgygqYQwK/SEsr9G9AJgThdp82
-LJ6fFAhcVQ2uPIkTluOLIJbKa9hHTrf+grBzSVtyiIFjumsL5rwaUQs4eLAspohK
-4yY+pEn7Raygz1afY4hy
-=JKoQ
+iQIcBAEBCAAGBQJQjD3BAAoJEDxpGckxwJCBxDIP/21Y/hd7gFxsc+3SGvL94ijJ
+RRmzzdQSEY1eWMZOOz99DfcjGhHJbgJSgQKwEQ9FcNHHXZiP86Xq8Hy8sVfYLFDy
+bzCK5rLjwTdu+MCRvzej9OQhqfNoAsWX3wHxmXZ87lYzu1GikwHoXTIBOjVOB5e8
+/rw4bz455+CCaBrLYpsKMDMzXlH7liNcHBgJNPfDM0OrRtkl8h+01D8I2Ga6YD2B
+b+QlzcYzJBLI7m9kzyafucoKr95dACoGapH8RXQjb3tjHsgTcUmSwWWCmp5nlCek
+ABUUdXpXs7jXJkeqgztjnuC0kh5hDIY99HmzKfNpiUEsSVDzvk6AaPrDpaPMs3LT
+jfzZrv5wRUJTJ6m5SATc9BiYZttZC/mB5QPCet0K7Hu4FrcjR/9Kfkbx/v+7kJQk
+CKGrmgJ9EUl6IzxnIRA4w7s0lffXHk52cOACVB8+4SUFYuNe+KxTBOKwZz961OhM
+sAVxvO6934ivUq9VGUcgZDFWPYN0lpn2dUxbQkk/m0HnBtMZujrgX17aXGV96MKH
+W7Xhw42m/cFlg3H4lSh3LBxUo0lb9d8wua1wWRmkvj8fncQ3vCepoT5GVP12FQ7e
+efSRyF8LNgbzaT8IQP+g+XnHEjKoI1G9ggLNN2LYu6ecFcRioEvKurvHpZfA1A+C
+erGdB7goaTkEYs6rsr2N
+=wCU9
 -----END PGP SIGNATURE-----
