@@ -1,6 +1,12 @@
 # ChangeLog for app-emacs/codepad
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*codepad-20100605 (27 Oct 2012)
+
+  27 Oct 2012; Ulrich Müller <ulm@gentoo.org> -codepad-20091130.ebuild,
+  +codepad-20100605.ebuild:
+  New snapshot.
 
   12 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
   codepad-20091130.ebuild:
